# ccipher

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENCE  README.md  build.sh
assets/: clean_quadgrams
include/libccipher/: ccipher.h  libccipher.h  logging.h  scorer.h  string.h
include/libccipher/ciphers/: caesar.h  substitution.h  vigenere.h
lib/: CMakeLists.txt  ccipher.c  libccipher.c  logging.c  scorer.c  string.c
lib/ciphers/: caesar.c  substitution.c  vigenere.c
src/: CMakeLists.txt  ccipher.c  libccipher.c
test/: CMakeLists.txt  ccipher.t.c
